PROJECT(mujs C)
CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

IF(WIN32)
	SET(CMAKE_CXX_FLAGS_RELEASE "/MT")
	SET(CMAKE_CXX_FLAGS_DEBUG "/MTd")
	IF(MSVC OR MSVC_IDE)
		SET(CMAKE_GENERATOR_TOOLSET "v141_xp" CACHE STRING "Platform Toolset" FORCE)
	ENDIF()
ENDIF()

ADD_LIBRARY(mujs STATIC one.c)

SET_PROPERTY(TARGET mujs PROPERTY C_STANDARD 99)

IF(NOT WIN32)
    FIND_PACKAGE(Readline)
	FIND_PACKAGE(m)

	ADD_EXECUTABLE(mujs-sh main.c)
	SET_PROPERTY(TARGET mujs-sh PROPERTY C_STANDARD 99)

	TARGET_COMPILE_DEFINITIONS(mujs-sh PRIVATE HAVE_READLINE)

	TARGET_LINK_LIBRARIES(mujs-sh mujs readline m)

	INSTALL(TARGETS mujs-sh DESTINATION bin)
	INSTALL(TARGETS mujs DESTINATION lib)
	INSTALL(FILES mujs.h DESTINATION include)
ENDIF()
